# wordtia

./: Cargo.toml  README.md
src/: celestia.rs  constants.rs  game.rs  main.rs  utils.rs
src/light-node/: Dockerfile  docker-compose.yaml
